--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,8 @@
       src="https://kit.fontawesome.com/544b95f70a.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDehtGBFMYXjEU0mBRkTTba5NPDgdzXDqQ"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=weekly&libraries=places&key=AIzaSyDehtGBFMYXjEU0mBRkTTba5NPDgdzXDqQ"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
