--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon/favicon-16x16.png"
+    />
     <link rel="manifest" href="./favicon/site.webmanifest" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,8 +28,7 @@
       src="https://kit.fontawesome.com/544b95f70a.js"
       crossorigin="anonymous"
     ></script>
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDehtGBFMYXjEU0mBRkTTba5NPDgdzXDqQ"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=weekly&libraries=places&key=AIzaSyDehtGBFMYXjEU0mBRkTTba5NPDgdzXDqQ"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=weekly&libraries=places&key=AIzaSyDehtGBFMYXjEU0mBRkTTba5NPDgdzXDqQ"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
